--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.556.0",
     "next": "15.5.7",
     "next-auth": "5.0.0-beta.30",
